force-app/main/default/objects/ASF_Checklist__c/ASF_Checklist__c.object-meta.xml
<CustomObject>
    <label>Checklist</label>
    <nameField>
        <displayFormat>C-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklists</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>