force-app/main/default/objects/ASF_Checklist__c/fields/Checklist_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Checklist_External_Id__c</fullName>
    <label>Checklist External Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>