force-app/main/default/objects/ASF_Checklist__c/fields/Mandatory__c.field-meta.xml
<CustomField>
    <fullName>Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mandatory?</label>
    <type>Checkbox</type>
</CustomField>