force-app/main/default/objects/ASF_Checklist__c/fields/Stage_Matched__c.field-meta.xml
<CustomField>
    <fullName>Stage_Matched__c</fullName>
    <formula>IF(TEXT(Case__r.Stage__c) =(Stage_Name__c),True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage Matched?</label>
    <type>Checkbox</type>
</CustomField>