force-app/main/default/objects/ASF_Checklist__c/fields/Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>Stage_Name__c</fullName>
    <label>Stage Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>