force-app/main/default/objects/ASF_Checklist__c/fields/Status_Picklist_Options__c.field-meta.xml
<CustomField>
    <fullName>Status_Picklist_Options__c</fullName>
    <description>This field is used to show the Status related Pick List values in LWC. Values are expected ; separated.</description>
    <label>Status Picklist Options</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>