force-app/main/default/objects/ASF_Checklist__c/fields/Systeminitiated__c.field-meta.xml
<CustomField>
    <fullName>Systeminitiated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Systeminitiated</label>
    <type>Checkbox</type>
</CustomField>