force-app/main/default/objects/ASF_Checklist__c/listViews/Admin_View.listView-meta.xml
<ListView>
    <fullName>Admin_View</fullName>
    <columns>Case__c</columns>
    <columns>Status__c</columns>
    <columns>Stage_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>Admin View</label>
</ListView>